# CattoCard

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
admin/: nginx.conf  package-lock.json  package.json  vite.config.ts
admin/src/: main.ts
admin/src/layouts/: AdminLayout.vue
admin/src/router/: index.ts
admin/src/stores/: app.ts  user.ts
admin/src/styles/: index.scss
admin/src/types/: index.ts
admin/src/utils/: request.ts
admin/src/views/: NotFound.vue
app/: __init__.py  config.py  main.py
app/api/: common.py
app/api/admin/: __init__.py  auth.py  order.py  payment.py  platform.py  product.py
app/api/v1/: __init__.py  order.py  payment.py  (+2 more)
app/core/: __init__.py  deps.py  exceptions.py  handlers.py  logger.py  response.py  security.py
app/models/: __init__.py  admin.py  base.py  order.py  platform.py  product.py
app/schemas/: __init__.py  admin.py  common.py  order.py  platform.py  product.py
app/services/: __init__.py  delivery.py  email.py  order.py  upload.py
app/utils/: __init__.py  cache.py  common.py  redis_client.py
migrations/models/: 0_20260109112558_init.py  1_20260109134908_add_admin.py  2_20260109140303_change product intro.py  3_20260110100314_change product.py  4_20260110173915_delete_contact_config.py
nginx/: nginx.conf
nginx/conf.d/: default.conf  default_ssl.conf
scripts/: docker-entrypoint.sh  init_admin.py  start.sh
tests/: conftest.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
web/src/: App.vue  style.css
(+37 files in other folders)
